# practice_repo

./: .gitignore  README.md
cpp_repo/cpp_prac/: CMakeLists.txt  base_test.cpp  base_test.h  class_test.cpp  class_test.h  cpp11_async.cpp  cpp11_concurrent.cpp  cpp11_test.cpp  cpp11_test.h  cpp14_test.cpp  cpp14_test.h  cpp17_test.cpp  cpp17_test.h  cpp_highperformace.cpp  cpp_template.cpp  gmon.out  inherit_test.cpp  inherit_test.h  main.cpp  perf.folded  perf.unfold  result.txt  socket_test.cpp  test.cpp  test_fork.cpp  thread_poll.cpp  toos.h  trie.cpp
cpp_repo/cpp_prac/testdir/: inc1.cpp  inc2.cpp  main.cpp  test_inc.cpp  test_inc.h
leetcode_repo/leetcode_prac/cpp/: main.cpp  test_arr.cpp  test_arr.h  test_win.cpp  test_win.h
leetcode_repo/leetcode_prac/cpp/tools/: 01_link_list.cpp  01_link_list.h
opencv_repo/opencv_practice/: CMakeLists.txt
opencv_repo/opencv_practice/opencv_utils/: CMakeLists.txt  image_helper.cpp  image_helper.h
opencv_repo/opencv_practice/practice01/: CMakeLists.txt  main.cpp  test.cpp
opencv_repo/opencv_practice/practice01/day01_09/: CMakeLists.txt  day01.h  edge_helper.cpp  edge_helper.h  filter_helper.cpp  filter_helper.h  hough_lane_detector.cpp  hough_lane_detector.h  opencv_img_base.cpp  plate_detector.cpp  plate_detector.h
python_repo/python_prac/: 01_注释、输入、输出.py  02_运算符.py  03_字符串.py  04_函数.py  05_元组.py  06_列表.py  07_字典.py  08_集合.py  09_列表推导式.py  10_组包、拆包.py  11_map_reduce_filter.py  12_文件.py  13_类.py  14_模块.py  15_进程.py  16_线程.py  17_socket_server.py  17_socket_server_2_error.py  18_socket_client.py  18_socket_client_2_error.py  19_http.py  20_闭包.py  21_装饰器.py  22_property.py  23_上下文管理.py  24_生成器.py  25_深拷贝和浅拷贝.py  26_正则表达式.py  27_urllib.py  28_http.client.HTTPResponse.py  29_handler.py  30_代理.py  31_cookie.py  32_jsonpath.py  33_csv.py  34_bs4.py  35_xpath.py  36_selenium.py  37_requests.py  38_queue.py  (+11 more)
qt_repo/: qt安装时换源.txt
qt_repo/practice_new/: CMakeLists.txt  ListViewTest.qml  Main.qml  PasswordInput.qml  Test1.qml  Test2.qml  a.qrc  main.cpp
qt_repo/practice_new/qml/: ListViewTest.qml  Main.qml  PathViewTest.qml  layout.qml
